Start and end timeline item time retrieves from API
